# scanner_interface

./: README.md
registrazione/: matrix_0.txt
src/: CMakeLists.txt  CMakeLists.txt~  calibrationdialog.cpp  calibrationdialog.cpp.autosave  calibrationdialog.h  calibrationdialog.ui  cloudsgrabber.cpp  cloudsgrabber.h  grabberprogressdialog.cpp  grabberprogressdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcl_visualizer.pro  rscloud.cpp  rscloud.h  rscloudgrabber.cpp  rscloudgrabber.h
src/calibration_utils/: color_ring.h  colorring.cpp  colorring.h  main.cpp  point_catched.h  pointcatched.cpp  pointcatched.h  transformation_utils.h  transformationutils.cpp  transformationutils.h  visualization_utils.h  visualizationutils.cpp  visualizationutils.h
